[package]
name = "my-redis"
version = "0.1.0"
authors = ["Marshall <magj2006@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { feature = ["full"], version = "1"}
bytes = "1"
mini-redis = "0.4"
dashmap = "4.0"
